--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <input type="number" id="minValue" placeholder="Min..." onkeydown="return event.keyCode !== 69" />
     <input type="number" id="maxValue" placeholder="Max..." onkeydown="return event.keyCode !== 69" />
-    <button onclick="myFunction()" class="filter-button">Filter</button>
+    <button onclick="mainFunc()" class="filter-button">Filter</button>
   </div>
 
     <table id="myTable">
