css file path corrected

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Osk vehicle filter project" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Rene R" />
-    <link rel="stylesheet" href="/styles//demo.css" />
-    <link rel="stylesheet" href="/styles/normalize.css" />
+    <link rel="stylesheet" href="styles//demo.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
   </head>
   <body>
     <section>
